<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/authorinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/author_info" />

        <ListView
            android:id="@+id/typelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/book_type" />

        <TextView
            android:id="@+id/favortitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favor_title" />

        <ListView
            android:id="@+id/favorlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>

        <ListView
            android:id="@+id/favorlist2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>

        <ListView
            android:id="@+id/favorlist3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick1"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickChart"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick3"
                android:text="@string/button3" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>