<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/usericon"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/usericon" />

            <TextView
                android:id="@+id/loginstatus"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="未登录"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center"
            android:onClick="onClickLogin"
            android:text="@string/login_button"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick1"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button3" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>